--- a/L3_Site_Template/theme/quick_quotes.css
+++ b/L3_Site_Template/theme/quick_quotes.css
@@ -126,9 +126,9 @@ body {
 
 /* Area colouring... */
 
-/* logo, banner and footer background are the same */
-.logo, .banner, .footer {
-    background-color: #888;  /* dark grey */
+/* Banner and footer background are the same */
+.banner, .footer {
+    background-color: #58a50c; /* Dark Green */
 }
 
 /* Set font on dark areas to white */
