Build during Show All Part 3 video
This is a build of the code during the third part of the Show All series

--- a/L3_Site_Template/theme/quick_quotes.css
+++ b/L3_Site_Template/theme/quick_quotes.css
@@ -212,3 +212,12 @@ input {
     display: inline-block;
 }
 
+/* ### Result styling, including 'tags' buttons ### */
+.results {
+    background-color: #58a50c;
+    border: solid 1px #007c72;
+    padding: 10px;
+
+    margin-right: 20px;
+    border-radius: 20px;
+}
