Build during Author Pages Part 2
This is the build of the code during the Author Pages Part 2 video

--- a/L3_Site_Template/theme/quick_quotes.css
+++ b/L3_Site_Template/theme/quick_quotes.css
@@ -230,3 +230,10 @@ input {
     border: solid 1px #000;
     border-radius: 5px;
 }
+
+.about {
+    background-color: #CCC;
+    border: solid 1px #222;
+    padding: 10px;
+    border-radius: 10px;
+}
