Build at the end of the Add Entry Part 3 video

--- a/L3_Site_Template/theme/quick_quotes.css
+++ b/L3_Site_Template/theme/quick_quotes.css
@@ -203,9 +203,13 @@ input {
     padding: 10px;
     display: inline-block;
     border: 1px solid #000;
-    box-sizing: border-box; 
+    box-sizing: border-box;
+    width: 95%;
 }
 
+input.short {
+    width: 100px;
+}
 
 .quicksearch {
     border-radius: 5px 0 0 5px; 
