--- a/L3_Site_Template/theme/quick_quotes.css
+++ b/L3_Site_Template/theme/quick_quotes.css
@@ -250,6 +250,12 @@ input.short {
     border: solid 1px #af0d0d;
 }
 
+/* Editing tool(s) formatting */
+.edit-tools {
+    text-align: right;
+    padding-right: 20px;
+}
+
 /* Form formatting */
 
 /* Makes the height of drop down menus slightly higher */
