--- a/L3_Site_Template/theme/quick_quotes.css
+++ b/L3_Site_Template/theme/quick_quotes.css
@@ -72,8 +72,8 @@ body {
 
 .linkwrapper {
     display: grid;
-    grid-template-columns: 3fr 2fr 1fr;
-    grid-template-areas: 
+    grid-template-columns: 1fr 300px 200px;
+    grid-template-areas:
         "commonsearches topsearch topadmin";
     grid-gap: 4px;
 }
@@ -96,7 +96,7 @@ body {
 
 /* Navigation responsiveness improvements (similar to above) */
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 900px) {
     .linkwrapper{
     grid-template-columns: auto;
     grid-template-rows: auto;
@@ -296,7 +296,15 @@ textarea.input[type=text] {
     padding: 10px;
 }
 
+add-field {
+    width: 90%;
+}
+
 textarea {
     width: 90%;
     max-width: 700px;
+}
+
+.gender {
+    width: 90%
 }
